--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             flex-direction: column;
             padding: 50px;
         }
+        button{
+            background-color:rgb(241, 197, 181) ;
+            color: rgb(191, 2, 2);
+            padding: 10px;
+            border-radius: 10px;
+            border: 2px solid rgb(243, 39, 39);
+        }
     </style>
 </head>
 <body>
@@ -30,6 +37,7 @@
 
    function myaccepted (){
     clearInterval(accepted);
+    alert("Thank You ❤️")
    }
 
  </script>
