--- a/day2.html
+++ b/day2.html
@@ -21,20 +21,27 @@
             color: rgb(191, 2, 2);
             padding: 10px;
             border-radius: 10px;
-            margin: 10px;
             border: 2px solid rgb(243, 39, 39);
-        }
-        a{
-            text-decoration: none;
-            color: rgb(165, 0, 0);
         }
     </style>
 </head>
 <body>
     <h1 style="color: rgb(0, 0, 0);">Hi My love!!!</h1>
-   
-  <button><a href="./day1.html">Happy Rose day</a></button>
-  <button><a href="./day2.html">Happy propose day</a></button>
+ <h2 id="proposal" style="color: rgb(15, 15, 15);"></h2>
+
+ <BUtton onclick="myaccepted()">ACCEPTED❤️</BUtton>
+
+ <script>
+   const accepted = setInterval(myproposal , 2000);
+
+   function myproposal(){
+    document.getElementById("proposal").innerHTML += "I LOVE YOU ❤️ ! <br> HAPPY propose DAY 🌹❤️ <br>"
+   }
+
+   function myaccepted (){
+    clearInterval(accepted);
+    alert("Thank You ❤️")
+   }
 
  </script>
 
